some changes added